--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,8 @@
 layout: page
 ---
 
+<div style="background-image: url('/assets/img/swan.png'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%; height: 100%; min-height: 100vh;">
+
 {{ content }}
 
 {% assign posts = paginator.posts | default: site.posts %}
